fix: contrast issue(accessibility)

--- a/four-card-feature-section/styles.css
+++ b/four-card-feature-section/styles.css
@@ -8,7 +8,7 @@
 
   /* Neutral Colors */
   --very-dark-blue: hsl(234, 12%, 34%);
-  --grayish-blue: hsl(229, 6%, 66%);
+  --grayish-blue: hsl(229, 6%, 46%);
   --very-light-gray: hsl(0, 0%, 98%);
 
   /* Font */
